crates/biome_yaml_formatter/tests/specs/prettier/yaml/comment/flow-sequence-mapping.yml.snap
---
source: crates/biome_formatter_test/src/snapshot_builder.rs
info: yaml/comment/flow-sequence-mapping.yml
---

# Input

```yml
    a:
      [
        check-format, check-lint,
        check-spelling,
        # coverage,
        # install-and-run-from-git,
      ]

    b:
      {
        a: check-format, b: check-lint,
        c: check-spelling,
        # d: coverage,
        # e: install-and-run-from-git,
      }

    d:
      # prettier-ignore
      [
        check-format, check-lint,
        check-spelling,
        # coverage,
        # install-and-run-from-git,
      ]

    e:
      # prettier-ignore
      {
        a: check-format, b: check-lint,
        c: check-spelling,
        # d: coverage,
        # e: install-and-run-from-git,
      }

```


# Error
```text
reformat: formatter output had syntax errors where input had none:
flow-sequence-mapping.yml:23:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `e`
  
    21 │       ]
    22 │ 
  > 23 │ e: # biome-ignore format: prettier ignore
       │ ^
    24 │ {
    25 │         a: check-format, b: check-lint,
  
  i Remove e
  
flow-sequence-mapping.yml:30:1 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found ``
  
    28 │         # e: install-and-run-from-git,
    29 │       }
  > 30 │ 
       │ 
  
  i Remove 
  

```
